Add PermGen space discussion